--- a/IdentityEample/appsettings.json
+++ b/IdentityEample/appsettings.json
@@ -1,11 +1,17 @@
 ﻿{
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
-  "AllowedHosts": "*"
-}
 
+    "Email": {
+        "Server":,
+        "Port":,
+        "SenderName":,
+        "SenderEmail":,
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft": "Warning",
+            "Microsoft.Hosting.Lifetime": "Information"
+        }
+    },
+    "AllowedHosts": "*"
+}
