--- a/IdentityEample/IdentityExample.csproj
+++ b/IdentityEample/IdentityExample.csproj
@@ -15,6 +15,7 @@
     <None Remove="Views\" />
     <None Remove="Microsoft.EntityFrameworkCore.SqlServer" />
     <None Remove="Microsoft.EntityFrameworkCore.Design" />
+    <None Remove="NETCore.MailKit" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.0.0" />
@@ -25,6 +26,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="NETCore.MailKit" Version="2.0.2" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Data\" />
