--- a/IdentityEample/appsettings.json
+++ b/IdentityEample/appsettings.json
@@ -1,10 +1,10 @@
 ﻿{
 
     "Email": {
-        "Server":,
-        "Port":,
-        "SenderName":,
-        "SenderEmail":,
+        "Server": "192.168.1.107",
+        "Port": 25,
+        "SenderName": "Douglas",
+        "SenderEmail": "Cks@test.com"
     },
     "Logging": {
         "LogLevel": {
